# SDL-parser

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
go-package/: example.go  example_test.go  go.mod  main.go
node-package/: .eslintrc.json  .gitignore  package.json
node-package/src/: example.ts  index.ts
parser/: Cargo.toml
parser-wasm/: Cargo.toml
parser-wasm/src/: lib.rs
python-package/: setup.cfg
python-package/src/: example.py
python-package/src/sdl_parser/: __init__.py
python-package/src/sdl_parser.egg-info/: SOURCES.txt  top_level.txt
python_package/src/sdl_parser/: __init__.py
python_package/src/sdl_parser.egg-info/: PKG-INFO
sdl-parser/: Cargo.toml  README.md
sdl-parser-export/: Cargo.toml  build.rs
sdl-parser-export/assets/: libsdl_parser.so.0  sdl-parser.conf
sdl-parser-export/assets/maintainer-scripts/: postinst
sdl-parser-export/src/: lib.rs
sdl-parser/src/: capability.rs  common.rs  condition.rs  conditions.rs  constants.rs  entity.rs  evaluation.rs  event.rs  feature.rs  goal.rs  helpers.rs  infrastructure.rs  inject.rs  lib.rs  library_item.rs  metric.rs  metrics.rs  node.rs  script.rs  story.rs  test.rs  training_learning_objective.rs  vulnerabilities.rs  vulnerability.rs
sdl-parser/src/snapshots/: sdl_parser__capability__tests__can_parse_capabilities_in_sdl.snap  sdl_parser__condition__tests__command_condition_is_parsed.snap  sdl_parser__condition__tests__command_condition_is_parsed.snap.new  sdl_parser__condition__tests__command_condition_is_parsed_correctly_even_with_source.snap.new  sdl_parser__condition__tests__command_condition_is_parsed_correctly_with_both_command_and_source.snap  sdl_parser__condition__tests__conditions_are_mapped_correctly.snap  sdl_parser__condition__tests__handles_metrics_with_conditions_correctly.snap  sdl_parser__condition__tests__library_condition_is_parsed.snap  sdl_parser__condition__tests__library_condition_is_parsed.snap.new  sdl_parser__condition__tests__source_fields_are_mapped_correctly.snap.new  sdl_parser__conditions__tests__command_condition_is_parsed.snap  sdl_parser__conditions__tests__command_condition_is_parsed_correctly_even_with_source.snap  sdl_parser__conditions__tests__condition_list_is_parsed.snap  sdl_parser__conditions__tests__library_condition_is_parsed.snap  sdl_parser__conditions__tests__source_fields_are_mapped_correctly.snap  sdl_parser__entity__tests__parses_entity_with_events.snap  sdl_parser__entity__tests__parses_sdl_with_entities.snap  sdl_parser__evaluation__tests__parses_sdl_with_evaluation.snap  sdl_parser__evaluation__tests__parses_sdl_with_metrics.snap  sdl_parser__event__tests__parses_sdl_with_events.snap  sdl_parser__feature__tests__feature_includes_dependencies.snap  sdl_parser__feature__tests__feature_includes_dependencies.snap.new  sdl_parser__feature__tests__feature_source_fields_are_mapped_correctly.snap  sdl_parser__feature__tests__feature_source_fields_are_mapped_correctly.snap.new  sdl_parser__feature__tests__feature_source_longhand_is_parsed.snap  sdl_parser__feature__tests__feature_source_shorthand_is_parsed.snap  sdl_parser__goal__tests__parses_sdl_with_goals.snap  sdl_parser__infrastructure__tests__bigger_infrastructure_is_parsed.snap  sdl_parser__infrastructure__tests__infranode_count_longhand_is_parsed.snap  sdl_parser__infrastructure__tests__infranode_count_longhand_is_parsed.snap.new  sdl_parser__infrastructure__tests__infranode_count_shorthand_is_parsed.snap  sdl_parser__infrastructure__tests__infranode_with_default_count_is_parsed.snap  sdl_parser__infrastructure__tests__infranode_with_links_and_dependencies_is_parsed.snap  sdl_parser__infrastructure__tests__sdl_keys_are_valid_in_lowercase_uppercase_capitalized.snap  sdl_parser__infrastructure__tests__simple_infrastructure_is_parsed.snap  sdl_parser__infrastructure__tests__simple_infrastructure_with_shorthand_is_parsed.snap  sdl_parser__inject__tests__parses_sdl_with_injects.snap  sdl_parser__library_item__tests__generate_package_list_based_on_sdl.snap  sdl_parser__metric__tests__parses_sdl_with_metrics.snap  sdl_parser__metric__tests__parses_sdl_with_metrics.snap.new  (+47 more)
sdl-parser/src/tests/: constants.rs
wasm-sdl-parser/: Cargo.toml  README.md
wasm-sdl-parser/src/: lib.rs
