[metadata]
name = sdl-parser
version = 0.19.0
author = Kaarel Allemann
author_email = kaarel.allemann@cr14.ee
description = Python wrapper for SDL parsing library
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src