[package]
name = "sdl-parser-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
sdl-parser = { path = "../sdl-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
