[package]
name = "sdl-parser"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytesize = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
insta = "1"
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_yaml = "0.8"
