[package]
name = "sdl-parser"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytesize = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
depper = "0.3"
lazy_static = { version = "1.4" }
insta = { version = "1", features = ["yaml"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_yaml = "0.9"

[features]
default = []
test = []
